# NsisGuiGuid

./: .gitignore  CMakeLists.txt  NsisGuiGuid.sln
3rdPart/tinyxml2/Debug-Dll/: tinyxml2.exp  tinyxml2.lib
3rdPart/tinyxml2/Debug-Lib/: tinyxml2.lib
3rdPart/tinyxml2/Release-Dll/: tinyxml2.exp  tinyxml2.iobj  tinyxml2.ipdb  tinyxml2.lib
3rdPart/tinyxml2/Release-Lib/: tinyxml2.lib
NsisGuiGuid/: NsisGuiGuid.vcxproj  NsisGuiGuid.vcxproj.filters  NsisGuiGuidDlg.h  NsisGuiGuidDlg.qrc  NsisGuiGuidDlg.ui  WgtRegister.cpp  WgtRegister.h
NsisGuiGuid/Code/: FileSetup.cpp  FileSetup.h  NsisGuiGuidDlg.cpp  NsisGuiGuidDlg.h  WgtBaseCfg.cpp  WgtBaseCfg.h  WgtCompile.cpp  WgtCompile.h  WgtTypeSelect.cpp  WgtTypeSelect.h  main.cpp
NsisGuiGuid/Code/Widget/: WgtBrowse.cpp  WgtBrowse.h  WgtSettingsS.cpp  WgtSettingsS.h  WgtSettingsS.ui
NsisGuiGuid/ConfigFiles/: SetupCfg.xml
NsisGuiGuid/FormFiles/: NsisGuiGuidDlg.ui
NsisGuiGuid/GeneratedFiles/: qrc_NsisGuiGuidDlg.cpp  ui_NsisGuiGuidDlg.h  ui_WgtSettingsS.h
NsisGuiGuid/Resources/: NsisGuiGuid.rc  NsisGuiGuidDlg.qrc
NsisGuiGuid/Source/: FileSetup.cpp  FileSetup.h  main.cpp  stdafx.h
NsisGuiGuid/Source/FormFiles/: NsisGuiGuidDlg.cpp  NsisGuiGuidDlg.h  NsisGuiGuidDlg.ui  WgtAdvancedCfg.cpp  WgtAdvancedCfg.h  WgtBrowse.cpp  WgtBrowse.h  WgtCompile.cpp  WgtCompile.h  WgtRegister.cpp  WgtSettingsS.cpp  WgtSettingsS.h
NsisGuiGuid/Source/Resources/: NsisGuiGuid.rc
